test/fixtures/commonmark/bad.txt
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 3506

.
[foo]

> [foo]: /url
.
<p><a href="/url">foo</a></p>
<blockquote>
</blockquote>
.

error:

<p><a href="/url">foo</a></p>
<blockquote>
</blockquote>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 3894

.
>
.
<blockquote>
</blockquote>
.

error:

<blockquote>
</blockquote>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 3902

.
>
>  
> 
.
<blockquote>
</blockquote>
.

error:

<blockquote>
</blockquote>

